CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(tltest_passive)

set(CMAKE_BUILD_TYPE Debug)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -fPIC -O0 -Wall -g2 -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -fPIC -O3 -Wall")

ADD_SUBDIRECTORY(Base)
ADD_SUBDIRECTORY(DPI)
ADD_SUBDIRECTORY(Sequencer)
ADD_SUBDIRECTORY(TLAgent)
ADD_SUBDIRECTORY(Fuzzer)

ADD_LIBRARY(${PROJECT_NAME} SHARED Base DPI Sequencer TLAgent Fuzzer)

TARGET_LINK_LIBRARIES(tltest_passive PUBLIC
    "-Wl,--whole-archive"
    Base DPI Sequencer TLAgent Fuzzer
    "-Wl,--no-whole-archive")
